# CppTraining

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
scripts/: check_toolchain_install.sh  install_docker.sh  synchronize_versions.sh  toolchain_install.sh
sources/: test.cpp
